2004-10-21  John Luke  <john.luke@gmail.com>

	* *Makefile.am: remove CSC= in individual Makefile.am's (make CSC='mcs -g' for debug)
	add $(DLL).mdb to CLEANFILES

2004-10-17  John Luke  <john.luke@gmail.com>

	* configure.in: echo $CSC at the end for the prefix impaired (like me)

2004-10-15  Fawad Halim <fawad@fawad.net>

	* build/AddIns/AddIns/BackendBindings/templates/Makefile.am: Add missing NemerleGtkSharpWindow.xft.xml reference.
	* src/AddIns/DisplayBindings/SourceEditor/Gui/SourceEditorDisplayBinding.cs:
	* src/AddIns/BackendBindings/CSharpBinding/CSharpBindingCompilerManager.cs:
	* build/AddIns/AddIns/BackendBindings/BackendBindings.addin.xml:
	* build/AddIns/AddIns/BackendBindings/templates/AppConfigFile.xft.xml: Added support for app.config at compile time for C#, and added template for same under File->New->Misc.
	

2004-10-04  Todd Berman  <tberman@off.net>

	* configure.in: Add a --with-gtk-sharp-2-0 to allow gtk-sharp-2-0
	to be used. This is a needed workaround for now to allow for people
	to get 2.0 completion info. Works around a mono bug. That jackson
	is going to fix. :)

2004-09-20  Tim Gerla  <tim@gerla.net>

	* configure.in:
	* Makefile.am: add --disable-update-mimedb to disable calling
		       update-mime-database on install. 

2004-09-19  Enver ALTIN  <ealtin@parkyeri.com>

	* configure.in: Added Turkish to ALL_LINGUAS.

2004-08-07  Todd Berman  <tberman@off.net>

	* configure.in: small changes for the 0.5.1 release on sunday.

2004-07-08  Pawel Rozanski  <tokugawa@afn.no-ip.org>

	* build/data/resources/icons/Nemerle.File.Form
	* build/data/resources/icons/Nemerle.Project.Form
	* build/data/resources/icons/Makefile.am:
	add Form icons for Nemerle.

2004-07-05  Todd Berman  <tberman@off.net>

	* configure.in:
	* Makefile.am:
	* monodevelop.in: Patch from Marcin Krzyzanowski <krzak@pld-linux.org>
	to fix mint issues.

2004-07-05  Todd Berman  <tberman@off.net>

	* Makefile.ams: remove libdir == $(prefix)/lib assumption. Patch from