@@ -1,3 +1,8 @@
+2004-10-27  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* Services/ParserService/DefaultParserService.cs: comment out code
+	to select the VB parser, because we dont actually have one yet.
+
 2004-10-22  Chris Toshok  <toshok@ximian.com>
 
 	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
